--- a/CCS Slider/style.css
+++ b/CCS Slider/style.css
@@ -4,9 +4,8 @@
 }
 
 .wrapper {
-  width: 75rem;
-  height: 45rem;
-  background-color: black;
+  width: 40rem;
+  height: 40rem;
   position: relative;
   margin: 0 auto;
 }
@@ -17,26 +16,17 @@
   justify-content: space-between;
 }
 
-.slider {
-  width: 68.75rem;
-  height: 37.5rem;
-  overflow: hidden;
-}
-
 img {
   object-fit: cover;
 }
 
 .middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  overflow: hidden;
 }
 
 .navigation {
   position: absolute;
-  bottom: 20px;
+  bottom: 10px;
   left: 95%;
   transform: translateX(-95%);
   display: flex;
@@ -69,13 +59,12 @@ input {
 }
 
 .slide {
-  width: 25%;
   transition: all 0.6s ease;
-}
-
-.slide img {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  width: 25%;
 }
 
 #r1:checked ~ .s1 {
@@ -93,12 +82,10 @@ input {
 
 .text {
   position: absolute;
-  bottom: 200px;
-  color: white;
-  display: inline-flex;
-  left: 35px;
+  color: black;
+  /* left: 200px; */
   font-size: 28px;
-  top: 540px;
+  bottom: 8px;
   opacity: 0;
 }
 
@@ -107,4 +94,12 @@ input {
 .slide-radio3:checked ~ .slide3,
 .slide-radio4:checked ~ .slide4 {
   opacity: 1;
+}
+
+.bar:active,
+.bar:active,
+.bar:active,
+.bar:active {
+  color: red;
+  background-color: red;
 }
